Got the downloader working

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div id="output-div" style="grid-area: output-area;">
         <textarea id="output-total-length" class="autolist-textarea output-area" placeholder="Total Length" readonly></textarea>
         <textarea id="output-total-area" class="autolist-textarea output-area" placeholder="Total Area" readonly></textarea>
+        <button id="download-button"> Download Blocks</button>
     </div>
 
     <div id="table-div" style="grid-area: table-area">
