Adding some codes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>
             When you would like to download a CSV of these objects select the objects in the following order (<code>TEXT</code>,
             <code>LINE</code>/<code>LWPOLYLINE</code>/<code>HATCH</code>/<code>ARC</code>, <code>TEXT</code>, <code>LINE</code>/<code>LWPOLYLINE</code>/<code>HATCH</code>/<code>ARC</code>, ...).
-            The text object will be used as the object's ID. The other objects are not required. Note that if selecting more than one LINE/LWPOLYLINE between TEXTs the 
+            The text object will be used as the object's ID. The other objects are not required. Note that if selecting more than one <code>LINE</code>/<code>LWPOLYLINE</code> between <code>TEXT</code>s the 
             lengths will be added together to give a total length. The same goes for <code>HATCH</code>s but for their areas.
         </p>
         
