--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./dist/css/main.css" rel="stylesheet"/>
+    <link rel="icon" type="image/png" href="./favicon.ico"/>
     <title>AutoList</title>
 </head>
 <body>
